[project]
name = "input_name"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
]


[tool.testing.pytest.ini_options]
pythonpath = ["./src", "./tests"]

[tool.ty.rules]
unsupported-base = "ignore"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []