[project]
name = "backend"
version = "0.1.0"
description = "FlowForm backend API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-migrate>=4.1.0",
    "gunicorn>=25.1.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "sqlalchemy-utils>=0.42.1",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.10.0",
    "mypy>=1.18.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=6.2.1",
    "pip-audit>=2.10.0",
    "bandit>=1.9.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
filterwarnings = [
    "error",
]
markers = [
    "unit: Fast unit tests",
    "integration: Tests that use external services or the database",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
    "ARG",
    "RUF",
    "D",
]
ignore = [
    "D100",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
    "D102",
    "D103",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ARG001"]
"migrations/**/*.py" = ["D"]
"scripts/**/*.py" = ["D"]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true


[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "tests/*",
    "migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
