[project]
name = "backend"
version = "0.1.0"
description = "FlowForm backend API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apispec>=6.6.1",
    "auth0-api-python>=1.0.0b7",
    "authlib>=1.7.1",
    "cryptography>=48.0.1",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    # Flask depends on Click; keep the transitive runtime dependency above its
    # vulnerable 8.3.1 release even when resolving without an existing lock.
    "click>=8.3.3",
    "flask-cors>=6.0.2",
    "flask-migrate>=4.1.0",
    "mako>=1.3.12",
    "gunicorn>=25.1.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "idna>=3.16",
    "requests>=2.33.0",
    # [crt] is needed by botocore's login credential provider — dev
    # containers authenticate via `aws login` profiles (see the backend
    # service in infra/containers/strategies/dev/compose/compose.yml).
    "boto3[crt]>=1.38.0",
    "cachetools>=5.5,<6",
    "sqlalchemy-utils>=0.42.1",
    "joserfc>=1.6.8",
    "urllib3>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "boto3-stubs[kms,secretsmanager]>=1.43.36",
    "coverage[toml]>=7.10.0",
    "mypy-boto3-sesv2>=1.43.18",
    "pygments>=2.20.0",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-cov>=6.2.1",
    "pyyaml>=6.0.2",
    "ruff>=0.12.0",
]
test = [
    "pygments>=2.20.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--show-capture=no",
    "--tb=short",
]
filterwarnings = [
    "error",
    "ignore:authlib\\.jose module is deprecated, please use joserfc instead\\.:authlib.deprecate.AuthlibDeprecationWarning"
]
markers = [
    "unit: Fast unit tests",
    "integration: Tests that use external services or the database",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
    "ARG",
    "RUF",
    "D",
]
ignore = [
    "D100",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
    "D102",
    "D103",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Phase 2 admin response routes are contract-first stubs: handlers must declare
# every path parameter for Flask binding and survey-access checks, but do not
# consume all of them until the Phase 7 admin-read service lands.
"app/api/v1/projects/survey_responses.py" = ["ARG001"]
"tests/**/*.py" = ["D", "ARG001"]
"migrations/**/*.py" = ["D"]
"scripts/**/*.py" = ["D"]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true


[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "tests/*",
    "migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
