[project]
name = "flowform-mcp"
version = "0.1.0"
description = "FlowForm dev MCP server — exposes the backend OpenAPI spec to MCP clients"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=48.0.1",
    "fastmcp>=3.3.1",
    "httpx>=0.27.0",
]

[tool.uv]
constraint-dependencies = [
    "joserfc>=1.6.8",
    "mcp>=1.28.1",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.31",
    "starlette>=1.3.1",
]
